# yew-debugger

./: .gitignore  Cargo.toml  DOCS.md  LICENSE  Makefile  README.md  background.js  content-script.js  devtools.js  manifest.json
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: makefile.yml
afsec/yew-debugger-ui/: Cargo.toml  trunk.toml  your_worker.js
afsec/yew-debugger-ui/src/: main.rs
afsec/yew-debugger-v2/panel/src/layout/my_list/: mod.rs
afsec/yew-debugger-v3/: devtools.js
afsec/yew-debugger-v3/panel/: package.json  vite.config.js
afsec/yew-debugger-v3/panel/src/: main.js
afsec/yew-debugger-v3/panel_old/: panel.js
afsec/yew-debugger-v3/panel_wasm/: panel.js
afsec/yew-debugger-v3/panel_wasm/src/: lib.rs
afsec/yew-debugger-v3/panel_wasm/src/layout/my_list/: item.rs
afsec/yew-debugger-v4/: .gitignore  background.js
afsec/yew-debugger-v4/.devcontainer/: Dockerfile
afsec/yew-debugger-v4/crx/: devtools.html  devtools.js  panel.html
afsec/yew-debugger-v4/crx/assets/: index-11560038.css
afsec/yew-debugger-v4/panel/wasm/: Cargo.toml
afsec/yew-debugger-v4/panel/wasm/src/: lib.rs  macros.rs  traits.rs
afsec/yew-debugger-v4/panel_wasm/: Cargo.toml
afsec/yew-debugger-v5/: .gitignore  manifest.json
afsec/yew-debugger-v5/background/: Makefile
afsec/yew-debugger-v5/panel/: Makefile
afsec/yew-debugger-v5/panel/src/: main.js
afsec/yew-debugger-v6/: Makefile
afsec/yew-debugger-v6/.devcontainer/: install_tooling.sh
afsec/yew-debugger-v6/examples/yew-debugger-counter-layout/: output.css  rustfmt.toml
afsec/yew-debugger-v6/examples/yew-debugger-counter-layout/app/src/models/: counter_model.rs
afsec/yew-debugger-v6/examples/yew-debugger-counter-layout/yew-app/: Cargo.toml
afsec/yew-debugger-v6/examples/yew-debugger-counter-layout/yew-app/src/models/: theme_mode_model.rs
attic/JADSN1894/poc-browser-extension-v2/: Cargo.toml  README.md  justfile
attic/JADSN1894/poc-browser-extension-v2/src/counter/: index.scss
attic/JADSN1894/poc-browser-extension-v2/src/counter/pkg/: counter-6529054b4f85177_bg.wasm  index-5f9cd2e19b49a90f.css  index.html
attic/JADSN1894/poc-browser-extension-v2/src/extension/src/: lib.rs  main.rs
attic/JADSN1894/poc-browser-extension-v2/yewDevToolsExt/: devtools.js  manifest.json  manifest.jsonc  panel.js  popup.js
attic/JADSN1894/yew-debugger-counter-layout/yew-app/: Cargo.toml
attic/afsec/yew-debugger-ui/: index.html  main.js  shell.nix
attic/afsec/yew-debugger-v2/.devcontainer/: devcontainer.json
attic/afsec/yew-debugger-v2/panel/src/: model.rs
attic/afsec/yew-debugger-v3/: devtools.js  manifest.json
attic/afsec/yew-debugger-v3/panel/: package-lock.json  tailwind.config.js
attic/afsec/yew-debugger-v3/panel_wasm/: Cargo.toml  index.html
attic/afsec/yew-debugger-v3/panel_wasm/src/layout/: mod.rs
attic/afsec/yew-debugger-v4/.devcontainer/: user_setup.sh
attic/afsec/yew-debugger-v4/panel/wasm/: old_panel.js
attic/afsec/yew-debugger-v5/: Makefile
attic/afsec/yew-debugger-v5/background/: Cargo.toml
attic/afsec/yew-debugger-v5/panel/: index.html
attic/afsec/yew-debugger-v6/: background.js
attic/afsec/yew-debugger-v6/examples/yew-debugger-counter-layout/: justfile  vite.config.js
attic/afsec/yew-debugger-v6/examples/yew-debugger-counter-layout/yew-app/src/: lib.rs
attic/afsec/yew-debugger-v6/examples/yew-debugger-counter-layout/yew-app/src/models/: counter_model.rs
attic/poc-browser-extension/: build.rs
attic/poc-browser-extension/misc/: PocYewDevToolsExt.excalidraw
attic/poc-browser-extension/src/counter/: Cargo.toml  index.html
attic/poc-browser-extension/src/counter/pkg/: counter-6529054b4f85177.js
attic/poc-browser-extension/src/counter/src/: main.rs
attic/poc-browser-extension/src/extension/: Cargo.toml
attic/poc-browser-extension/yewDevToolsExt/: devtools.html  panel.html  panel.js  popup.html
attic/poc-browser-extension/yewDevToolsExt/from-yew/: counter-f72d81bff2906f1f.js
background/: Cargo.toml  Makefile
background/src/: lib.rs
examples/spreadsheet-cells-with-yew-debugger/: .gitignore  Cargo.toml  Makefile  README.md  index.html  index.js  input.css  output.css  rust-toolchain.toml  tailwind.config.js
examples/spreadsheet-cells-with-yew-debugger/.cargo/: config.toml
examples/spreadsheet-cells-with-yew-debugger/.devcontainer/: Dockerfile  devcontainer.json  install_tooling.sh
examples/spreadsheet-cells-with-yew-debugger/frontend/: Cargo.toml
examples/spreadsheet-cells-with-yew-debugger/frontend/src/: lib.rs
examples/yew-debugger-counter-layout/: Makefile  index.html  justfile  output.css  package-lock.json  package.json
examples/yew-debugger-counter-layout/app/: Cargo.toml
examples/yew-debugger-counter-layout/app/src/: lib.rs
examples/yew-debugger-counter-layout/app/src/models/: theme_mode_model.rs
examples/yew-debugger-counter-layout/yew-app/: Cargo.toml
examples/yew-debugger-counter-layout/yew-app/src/: lib.rs
examples/yew-debugger-counter-layout/yew-app/src/components/: counter_component.rs  mod.rs
lib/yew-debugger/: Cargo.toml
lib/yew-debugger-derive/: Cargo.toml
lib/yew-debugger-derive/src/: lib.rs
lib/yew-debugger/src/: lib.rs  macros.rs
panel/: Makefile  index.html  output.css  package-lock.json  package.json  tailwind.config.js
panel/src/: main.js
panel/wasm/: Cargo.toml  Makefile
panel/wasm/src/: lib.rs
panel/wasm/src/models/: mod.rs
scripts/: google-chrome.sh  vscode.sh
yew-debugger-counter-layout/: index.js  justfile  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js  vite.config.js
yew-debugger-counter-layout/app/src/: lib.rs
yew-debugger-counter-layout/app/src/components/: counter_component.rs
yew-debugger-counter-layout/yew-app/src/: lib.rs
yew-debugger-counter-layout/yew-app/src/models/: mod.rs
