[workspace]

members = [
    "./background",
    "./examples/yew-debugger-counter-layout/yew-app",
    "./panel/wasm",
]
[workspace.dependencies]
gloo = { version = "0.10.0" }
yew = { version = "0.21.0" }
js-sys = { version = "0.3.64" }
serde = { version = "1.0.188" }
serde_json = { version = "1.0.107" }
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = { version = "0.2.87" }
web-sys = { version = "0.3.64" }
