[workspace]
resolver = "2"

members = ["background", "panel/wasm"]

exclude = [
    "examples/yew-debugger-counter-layout/yew-app",
    "lib/yew-debugger",
    "lib/yew-debugger-derive",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
base64 = { version = "0.21.5" }
gloo = { version = "0.10.0" }
yew = { version = "0.21.0" }
js-sys = { version = "0.3.64" }
serde = { version = "1.0.190" }
serde_json = { version = "1.0.107" }
serde-wasm-bindgen = "0.6.1"
wasm-bindgen = { version = "0.2.87" }
web-sys = { version = "0.3.64" }
yew-debugger = { version = "*" }
