[package]
name = "background"
version = "0.0.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo = { workspace = true }
yew = { workspace = true }
js-sys = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
wasm-bindgen = { workspace = true }
