[package]
name = "background"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo = { workspace = true }
yew = { workspace = true }
js-sys = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
wasm-bindgen = { workspace = true }
