[package]
name = "counter"
version = "0.1.1"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
gloo = "0.10"
js-sys = "0.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
wasm-bindgen = "0.2"
web-sys = "0.3.64"
yew = { version = "0.20.0", features = ["csr"] }
