[package]
name = "yew-debugger"
version = "0.0.1"
edition = "2021"

[dependencies]
# base64 = { workspace = true }
# serde_json = { workspace = true }
# js-sys = { workspace = true }
# web-sys = { workspace = true }
# wasm-bindgen = { workspace = true }
# gloo = { workspace = true }

base64 = { version = "0.21.4" }
gloo = { version = "0.10.0" }
js-sys = { version = "0.3.64" }
serde_json = { version = "1.0.107" }
wasm-bindgen = { version = "0.2.87" }
web-sys = { version = "0.3.64" }
