[package]
name = "yew-debugger"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Yew debugger collector"

[dependencies]
base64 = { version = "0.21.4" }
gloo = { version = "0.10.0" }
js-sys = { version = "0.3.64" }
serde_json = { version = "1.0.107" }
wasm-bindgen = { version = "0.2.87" }
web-sys = { version = "0.3.64" }
