[package]
name = "panel"
version = "0.0.2"
edition = "2021"
license = "MIT"


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
base64 = { workspace = true }
gloo = { workspace = true }
yew = { workspace = true, features = ["csr"] }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
