[package]
name = "communication_grandchild_with_grandparent"
version = "0.0.1"
authors = ["Marcel Ibes <mibes@mibesco.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
gloo = "0.10.0"
yew = { version = "0.21.0", features = ["csr"] }
js-sys = "0.3.64"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"

