[package]
name = "yew-app"
publish = false
edition = "2021"
rust-version = "1.72.1"
version = "0.0.1"
description = "Frontend for yew-debugger"
authors = ["https://github.com/JADSN1894"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

# [patch.crates-io]
# yew-debugger = { path = "../../../lib/yew-debugger" }
# yew-debugger-derive = { path = "../../../lib/yew-debugger-derive" }

[dependencies]
gloo = { version = "=0.10.0" }
js-sys = { version = "=0.3.64" }
wasm-bindgen = { version = "=0.2.87" }
web-sys = { version = "=0.3.64" }
yew = { version = "=0.21.0", features = ["csr"] }
yew-debugger = { version = "*" }
yew-debugger-derive = { version = "*" }
