[package]
name = "yew-app"
publish = false
edition = "2021"
rust-version = "1.72.1"
version = "0.0.1"
description = "Frontend for yew-debugger"
authors = ["https://github.com/JADSN1894"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

# [patch.crates-io]
# yew-debugger = { path = "../../../lib/yew-debugger" }
# yew-debugger-derive = { path = "../../../lib/yew-debugger-derive" }

[dependencies]
gloo = { version = "=0.10.0" }
js-sys = { version = "0.3.65" }
wasm-bindgen = { version = "=0.2.88" }
web-sys = { version = "=0.3.65" }
yew = { version = "=0.21.0", features = ["csr"] }
yew-debugger = { version = "=0.0.1" }
yew-debugger-derive = { version = "=0.0.1" }
