[package]
name = "counter"
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gloo = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
yew = { workspace = true, features = ["csr"] }
