[package]
name = "extension"
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
build = "../../build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo = { workspace = true }
wasm-bindgen = { workspace = true }
yew = { workspace = true, features = ["csr"] }
